--- a/app/src/main/res/layout/row_chat_right.xml
+++ b/app/src/main/res/layout/row_chat_right.xml
@@ -4,6 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="10dp"
+    android:layout_marginTop="6dp"
+    android:background="@drawable/bg_sender"
+    android:layout_marginStart="120dp"
+    android:id="@+id/ll_msg"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -18,31 +22,58 @@
             android:src="@drawable/profile"
             app:civ_border_color="#FF000000"
             app:civ_border_width="0dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:text="12:00PM"
-            android:textSize="12dp"
-            android:textColor="@color/black"
-            android:id="@+id/tv_time"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/tv_msg"
-            android:textSize="16sp"
-            android:layout_weight="1"
-            android:text="His Message"
-            android:padding="15dp"
-            android:textColor="@color/black"
-            android:background="@drawable/bg_sender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/tv_msg"
+                android:textSize="16sp"
+                android:layout_weight="1"
+                android:text="His Message"
+                android:paddingStart="12dp"
+                android:paddingBottom="3dp"
+                android:paddingEnd="6dp"
+                android:textColor="@color/white"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="horizontal"
+                android:gravity="end"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="12:00PM"
+                    android:textSize="8dp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:id="@+id/tv_time"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:gravity="end"
+                    android:textSize="8dp"
+                    android:paddingStart="6dp"
+                    android:paddingEnd="6dp"
+                    android:text="Delivered"
+                    android:textColor="@color/white"
+                    android:id="@+id/tvisSeenTv"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:gravity="end"
-        android:id="@+id/tvisSeenTv"
-        android:layout_height="wrap_content"/>
+
+
+
 
 
 
