--- a/app/src/main/res/drawable/bg_sender.xml
+++ b/app/src/main/res/drawable/bg_sender.xml
@@ -7,13 +7,13 @@
             android:pivotY="0%"
             android:toDegrees="0" >
             <shape android:shape="rectangle" >
-                <solid android:color="@color/teal_200" />
+                <solid android:color="#00bfa5" />
             </shape>
         </rotate>
     </item>
     <item android:right="8dp">
         <shape android:shape="rectangle" >
-            <solid android:color="@color/teal_200" />
+            <solid android:color="#00bfa5" />
             <corners android:radius="4dp" />
         </shape>
     </item>
