--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -100,6 +100,13 @@
         android:layout_width="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_height="56dp">
+        <ImageButton
+            android:id="@+id/attchBtn"
+            android:background="@color/white"
+            android:src="@drawable/ic_baseline_attach_file_24"
+            android:layout_marginStart="12dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
         <EditText
             android:layout_width="wrap_content"
             android:ems="10"
