--- a/app/src/main/res/layout/row_chat_left.xml
+++ b/app/src/main/res/layout/row_chat_left.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:gravity="center"
+        android:gravity="center|top"
         android:layout_height="wrap_content">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
@@ -27,11 +27,13 @@
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
+          android:gravity="center|top"
           android:layout_height="wrap_content">
           <TextView
               android:id="@+id/tv_msg"
               android:textSize="16sp"
               android:layout_weight="1"
+              android:visibility="gone"
               android:text="His Message"
               android:paddingStart="12dp"
               android:layout_marginEnd="6dp"
@@ -39,6 +41,15 @@
               android:paddingBottom="3dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>
+          <ImageView
+              android:id="@+id/messagIv"
+              android:adjustViewBounds="true"
+              android:padding="15dp"
+              android:src="@drawable/ic_baseline_image_24"
+              android:layout_width="200dp"
+              android:scaleType="fitCenter"
+              android:background="@drawable/bg_receiver"
+              android:layout_height="200dp"/>
           <TextView
               android:layout_width="match_parent"
               android:text="12:00PM"
