--- a/app/src/main/res/layout/row_chat_right.xml
+++ b/app/src/main/res/layout/row_chat_right.xml
@@ -38,6 +38,15 @@
                 android:textColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+            <ImageView
+                android:id="@+id/messagIv"
+                android:adjustViewBounds="true"
+                android:padding="15dp"
+                android:src="@drawable/ic_baseline_image_24"
+                android:layout_width="200dp"
+                android:scaleType="fitCenter"
+                android:background="@drawable/bg_sender"
+                android:layout_height="200dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
